fix(waybar): aligned modules with the windows placement

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -173,12 +173,12 @@
 
 .modules-left {
   padding-top: 5px;
-  padding-left: 8px;
+  padding-left: 7px;
 }
 
 .modules-right {
   padding-top: 5px;
-  padding-right: 8px;
+  padding-right: 7px;
 }
 
 tooltip {
